--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.0.8",
     "classnames": "^2.3.2",
     "firebase": "8.x",
+    "global": "^4.4.0",
     "node-sass": "^7.0.3",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
